--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   cloud_firestore: ^5.6.6
   firebase_storage: ^12.4.5
   hive: ^2.2.3
+  flutter_screenutil: ^5.9.3
+  flutter_otp_text_field: ^1.4.0+2
+  file_picker: ^10.1.9
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
